--- a/jtc-summit/index.html
+++ b/jtc-summit/index.html
@@ -73,26 +73,12 @@
         <div id="moreinfo" class="step slide" data-rel-x="-1100" data-rel-y="300" data-rotate="720" data-transition-duration="2000">
             <h1>More info</h1>
             <ul>
-            <li><a href="https://github.com/impress/impress.js/blob/master/DOCUMENTATION.md">DOCUMENTATION.md</a> is the API reference.
-            </li>
-            <li><a href="https://github.com/impress/impress.js/blob/master/examples/classic-slides/index.html">Source of this presentation itself</a> is commented</li>
-            <li><a href="http://impress.github.io/impress.js/">Advanced Impress.js demo</a> by <a href="http://twitter.com/bartaz">@bartaz</a>
-                <ul>
-                <li>Again, the <a href="http://github.com/impress/impress.js/blob/master/index.html">html</a> 
-                    and <a href="https://github.com/impress/impress.js/blob/master/css/impress-demo.css">css</a> source is well commented.</li>
-                </ul>
-            </li>
-            <li>More examples and demos:
-                <ul>
-                <li><a href="https://github.com/impress/impress.js/tree/master/examples">examples/</a> in this repository</li>
-                <li><a href="https://github.com/impress/impress.js/wiki/Examples-and-demos">on the impress.js wiki</a></li>
-                </ul>
-            </li>
-            <li>Check out <a href="https://github.com/impress/impressionist">Impressionist</a>: a 3D GUI to create impress.js presentations</li>
-            </ul>
-
-            <div class="notes">
-            </div>
+                <li>
+                    <a href="https://github.com/evrimozcelik/openshift-advanced-deployments">https://github.com/evrimozcelik/openshift-advanced-deployments</a>
+                </li>
+                <li>
+                    <a href="https://www.ibm.com/cloud/architecture/architectures">https://www.ibm.com/cloud/architecture/architectures</a>
+                </li>            
         </div>
 
         <!-- This last, empty "slide" is set to be very large using the data-scale attribute, 
